# x86-cpu-rust

./: .editorconfig  .gitattributes  .gitignore  .release.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  docs.yml  msrv.yml
crates/apic/: Cargo.toml
crates/apic/src/: lib.rs
crates/cpu-core/: Cargo.toml
crates/cpu-core/src/: control.rs  cpu.rs  dr.rs  exceptions.rs  feature.rs  flags.rs  ir.rs  lib.rs  memory.rs  msr.rs  privilege.rs  regs.rs  segments.rs  types.rs
crates/dbg-gdb/: Cargo.toml
crates/dbg-gdb/src/: lib.rs
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs
crates/devices-io/: Cargo.toml
crates/devices-io/src/: lib.rs
crates/fpu-simd/: Cargo.toml
crates/fpu-simd/src/: lib.rs
crates/loaders/: Cargo.toml
crates/loaders/src/: lib.rs
crates/mmu-tlb/: Cargo.toml
crates/mmu-tlb/src/: lib.rs  paging.rs  seg.rs  tlb.rs
crates/runner/: Cargo.toml
crates/runner/examples/: basic.rs
crates/runner/src/: main.rs
crates/sys/: Cargo.toml
crates/sys/src/: lib.rs  smm.rs  svm.rs  vmx.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  smoke.rs
docs/: APIC-SMP.md  ARCHITECTURE.md  DEBUGGER.md  EXCEPTIONS.md  ISA-COVERAGE.md  SEG-PAGING.md  SIMD-FPU.md  TESTING.md  VIRTUALIZATION.md
